--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ dev = [
     "pre-commit>=4.3.0",
     "ipython>=8.0.0",
 ]
+opencv = [
+    "opencv-python>=4.11.0.86",
+]
 
 [build-system]
 requires = ["hatchling"]
