--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "track-linearization>=2.4.0",
     "jupyter>=1.1.1",
     "nbconvert>=7.16.6",
-    "ipykernel>=7.1.0",
+    "ipykernel>=6.0.0",
 ]
 authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
 keywords = [
@@ -55,6 +55,15 @@ dev = [
     "pre-commit>=4.3.0",
     "ipython>=8.0.0",
     "mypy>=1.18.2",
+]
+docs = [
+    "mkdocs>=1.6.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.26.0",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.0",
+    "mkdocs-section-index>=0.3.0",
+    "mkdocs-jupyter>=0.25.0",
 ]
 opencv = [
     "opencv-python>=4.11.0.86",
