Add full API parity and new utilities to CompositeEnvironment
Expanded CompositeEnvironment to include region queries (bins_in_region, mask_for_region), shortest_path, and info methods for full API parity with Environment. Added KDTree-based bin_at() for performance, improved documentation, and updated the example notebook and script to demonstrate new features. Added new validation and test modules for layout and composite methods.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,6 +136,11 @@ ignore = [
     "N806",    # Allow uppercase variables (G, R, A, T, etc.) for mathematical notation
 ]
 
+# Example notebooks: Allow imports in cells (converted from .ipynb)
+"examples/*.py" = [
+    "E402",  # Module level import not at top of file (common in notebook cells)
+]
+
 # Source files with intentional mathematical notation
 "src/neurospatial/distance.py" = [
     "N803",  # Allow G (graph) as argument name - standard NetworkX convention
