Refactor environment into modular mixins and add protocols
Refactored the environment package into modular mixin classes for trajectory, fields, and metrics. Added EnvironmentProtocol for type-safe mixin access and enforced strict mypy type checking. Updated documentation, changelog, and user guides to reflect new structure and type requirements. Improved maintainability and type safety without breaking the public API.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
           - scikit-learn
           - shapely
         args: [--ignore-missing-imports, --warn-unused-ignores]
-        exclude: '^docs/examples/.*\.py$'
+        exclude: '^(docs/examples/.*\.py|tests/.*)$'
