--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
           - scikit-learn
           - shapely
         args: [--ignore-missing-imports, --warn-unused-ignores]
-        exclude: '^(docs/examples/.*\.py|tests/.*)$'
+        exclude: '^(docs/examples/.*\.py|examples/.*\.py|tests/.*)$'
