Add memory safety checks for large grid creation
Introduces automatic memory estimation and ResourceWarning for large grid-based environments in layout engines. The new `check_grid_size_safety` and `estimate_grid_memory` utilities warn users when grid creation may exceed a configurable memory threshold, with suggestions for reducing usage. Updates all grid layout engines to include safety checks, documents the feature, and adds comprehensive tests for memory safety. Also, region assignment now emits a UserWarning on overwrite instead of raising KeyError, following standard dict semantics.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,9 @@ build-backend = "hatchling.build"
 [tool.hatchling.build.targets.wheel]
 packages = ["src/neurospatial"]
 
+[tool.hatchling.build.targets.wheel.force-include]
+"src/neurospatial/py.typed" = "neurospatial/py.typed"
+
 [tool.hatchling.build.targets.sdist]
 include = [
     "src/neurospatial/py.typed",
