Add new modules to type checker configuration
Included 'mpl_toolkits.*' and 'tqdm.*' in the list of modules for type checking in pyproject.toml to ensure proper handling of imports and suppress missing import errors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -239,8 +239,10 @@ module = [
     "cv2.*",
     "shapely.*",
     "matplotlib.*",
+    "mpl_toolkits.*",
     "networkx.*",
     "pandas.*",
+    "tqdm.*",
     "track_linearization.*",
 ]
 ignore_missing_imports = true
