Enable parallel test runs and improve simulation config
Added pytest-xdist support and excluded slow tests by default in pytest.ini. Enhanced simulation session functions to accept and document additional model parameters for place, boundary, and grid cells. Updated integration and benchmark tests to use faster simulation settings and marked performance tests as slow for selective execution.

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --strict-markers
+addopts = -v --strict-markers -n auto -m "not slow"
 
 # Markers for CI/CD
 markers =
