--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync --extra dev
+        env:
+          UV_PYTHON: python${{ matrix.python-version }}
 
       - name: Run ruff check
         run: |
@@ -52,6 +54,7 @@ jobs:
           uv run pytest --cov=src/neurospatial --cov-report=xml --cov-report=term
         env:
           MPLBACKEND: Agg  # Use non-GUI backend for matplotlib
+          UV_PYTHON: python${{ matrix.python-version }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
