Specify UTF-8 encoding when reading text files in tests
Updated test scripts to explicitly set encoding="utf-8" when reading text files to ensure consistent behavior across platforms. Also added UV_PYTHON environment variable to GitHub Actions workflow steps for ruff and mypy to specify Python version.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,15 +39,21 @@ jobs:
       - name: Run ruff check
         run: |
           uv run ruff check .
+        env:
+          UV_PYTHON: python${{ matrix.python-version }}
 
       - name: Run ruff format check
         run: |
           uv run ruff format --check .
+        env:
+          UV_PYTHON: python${{ matrix.python-version }}
 
       - name: Run mypy
         run: |
           uv run mypy src/neurospatial
         continue-on-error: true  # Don't fail build on type errors (yet)
+        env:
+          UV_PYTHON: python${{ matrix.python-version }}
 
       - name: Run tests with coverage
         run: |
