--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
     "mypy>=1.18.2",
     "hypothesis>=6.92.0",
     "imageio>=2.35.0",  # For video test fixtures
+    "pyarrow>=22.0.0",  # For parquet test fixtures
 ]
 docs = [
     "mkdocs>=1.6.0",
