Improve annotation widget shape handling and add tests
Refactored the annotation widget to preserve shape creation order, improve selection logic, and throttle data change events for better UI performance. Enhanced status feedback to warn about duplicate names and blocked redundant redraws during shape modifications. Added comprehensive tests for environment creation with holes, hole subtraction from boundaries, and calibration round-trip consistency.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,5 +35,6 @@ repos:
           - scikit-learn
           - shapely
           - ipython
+          - magicgui
         args: [--ignore-missing-imports, --warn-unused-ignores]
-        exclude: '^(docs/examples/.*\.py|examples/.*\.py|tests/.*)$'
+        exclude: '^(docs/examples/.*\.py|examples/.*\.py|tests/.*|src/neurospatial/annotation/.*|benchmarks/.*)$'
