Add video annotation user guide documentation
Introduces a new 'Video Annotation' section to the user guide, detailing interactive environment and region annotation from video frames using napari. Updates navigation in mkdocs.yml and index.md to reference the new documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,6 +155,7 @@ nav:
       - Environments: user-guide/environments.md
       - Layout Engines: user-guide/layout-engines.md
       - Regions: user-guide/regions.md
+      - Video Annotation: user-guide/video-annotation.md
       - Composite Environments: user-guide/composite-environments.md
       - Alignment & Transforms: user-guide/alignment.md
       - Spatial Analysis: user-guide/spatial-analysis.md
