Refactor type annotations and improve UI event handling
Added stricter mypy overrides for several modules in pyproject.toml. Refactored type annotations and helper functions in _napari_widget.py for clarity and type safety, including improved Qt event handling. Introduced RenameResult named tuple in _controller.py for clearer shape renaming results. Updated spike_field.py to use Literal for the 'method' argument in compute_place_field for better type checking.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -258,6 +258,19 @@ check_untyped_defs = false
 ignore_missing_imports = true
 
 # Note: numpy.typing.mypy_plugin is deprecated in NumPy 2.3+
+
+[[tool.mypy.overrides]]
+module = [
+    "neurospatial.spatial",
+    "neurospatial.field_ops",
+    "neurospatial.spike_field",
+    "neurospatial.io",
+    "neurospatial.alignment",
+    "neurospatial.environment.core",
+    "neurospatial.simulation.validation",
+]
+disallow_untyped_defs = true
+check_untyped_defs = true
 # NumPy now has built-in type stubs that work without plugins
 
 # Ignore missing imports for libraries without type stubs
