Add qtpy to mypy dependencies and clean imports
Added 'qtpy' to the mypy dependency list in pre-commit config to ensure type checking works for qtpy imports. Removed unnecessary 'type: ignore[attr-defined]' from qtpy.QtCore.QTimer imports in _napari_widget.py for cleaner code.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,5 +36,6 @@ repos:
           - shapely
           - ipython
           - magicgui
+          - qtpy
         args: [--ignore-missing-imports, --warn-unused-ignores]
         exclude: '^(docs/examples/.*\.py|examples/.*\.py|tests/.*|src/neurospatial/annotation/.*|benchmarks/.*)$'
