Add integration test marker to pytest config
Introduces a new 'integration' marker in pytest.ini for cross-module integration tests, such as spike_field+plot, NWB, and animation.

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ markers =
     gui: marks tests as requiring GUI/display (deselect with '-m "not gui"')
     slow: marks tests as slow performance benchmarks (deselect with '-m "not slow"')
     napari: marks tests as requiring napari viewer (deselect with '-m "not napari"')
+    integration: marks tests as cross-module integration tests (spike_field+plot, NWB, animation)
