Add Bayesian decoding and bandit task examples
Introduces Bayesian position decoding documentation and API usage to CLAUDE.md, including trajectory analysis and shuffle-based significance testing. Adds two new example files for real data bandit task analysis (Python and Jupyter notebook), and updates optional dependency instructions for trajectory analysis in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,10 @@ nwb-full = [
     "ndx-pose>=0.2.0",
     "ndx-events>=0.4.0",
 ]
+# Trajectory analysis extras (for Radon transform detection)
+trajectory = [
+    "scikit-image>=0.19.0",  # Radon transform for trajectory detection
+]
 # Annotation boundary inference extras
 annotation-kde = [
     "scikit-image>=0.19.0",  # KDE boundary method
