Add directional and spatial view cell example notebooks
Added new example notebooks for directional place fields and spatial view cells in both docs and main examples. Renamed and reorganized directional place field scripts, updated video overlay examples to remove unnecessary noqa comments, and updated mkdocs.yml to include new documentation files. These additions provide comprehensive demonstrations of direction-conditioned and spatial view cell analyses for users.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,5 +185,7 @@ nav:
       - Video Overlay: examples/18_video_overlay.ipynb
       - Real Data Bandit Task: examples/19_real_data_bandit_task.ipynb
       - Bayesian Decoding: examples/20_bayesian_decoding.ipynb
+      - Directional Place Fields: examples/21_directional_place_fields.ipynb
+      - Spatial View Cells: examples/22_spatial_view_cells.ipynb
   - Contributing: contributing.md
   - Changelog: changelog.md
